--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,16 +60,66 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    justify-content: center;
 }
-.card{
+#contenido .card{
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 1px solid;
-    }
+    
+}
+#contenido .card img{
+    width: 300px;
+    height: 250px ;
+}
+#contenido .card p{
+    margin:0;
+    padding-top: 10px;
+}
+#contenido .card button{
+    margin-bottom: 10px;
+    color: white;
+    background-color: rgb(3, 58, 177);
+    width: 70px;
+    height: 20px;
+    border: none;
+}
+#contenido .paginar{
+    display: flex;
+    justify-content: center;
+    width: 80%;
+}
+#contenido .paginar ul{
+    display: flex;
+    list-style: none;
+    padding:0;
+}
+#contenido .paginar li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 30px;
+    border: 1px ridge; 
+}
+#contenido .paginar li a{
+    text-decoration: none;
+}
+
 #footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(51, 6, 122);
     grid-area: footer;
     color: white;
+}
+#footer .redes{
+    padding-top: 10px;
+
+}
+#footer p{
+    margin: 0;
+    padding-bottom:10px;
 }
