--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,15 +9,15 @@ body{
     font-size: 13px;
     display: grid;
     height: 100vh;
-    grid-template-columns: 1f;
-    grid-template-rows: auto auto 1fr auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 70% auto;
     grid-template-areas: 
     "navbar"
     "filtro"
     "contenido"
     "footer";
 }
-#navbar{
+#contenedor-navbar{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -25,15 +25,18 @@ body{
     grid-area: navbar;
     color: white;
 }
-#navbar .marca{
+#contenedor-navbar .marca{
     display: flex;
     align-items: center;
     justify-content: space-around;
     margin-left: 20px;
     gap:10px;
 }
-#navbar .fa-bars{
+#contenedor-navbar .fa-bars{
     margin-right: 20px;
+}
+#contenedor-navbar .list{
+    display: none;
 }
 #filtro{
     background-color: rgb(189, 196, 212);
@@ -53,7 +56,6 @@ body{
     height: 2em;
     border:none;
     /* border-width: 0; */
-
 }
 #contenido{
     grid-area: contenido;
@@ -62,12 +64,18 @@ body{
     align-items: center;
     justify-content: center;
 }
-#contenido .card{
+#contenido .galeria{
+  overflow: hidden;
+  width: 80%;
+  border: 1px solid;
+  height: 80%;
+}
+#contenido .galeria .card{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid;
-    
+    justify-content: center;
+    height: 100%;
 }
 #contenido .card img{
     width: 300px;
@@ -114,6 +122,7 @@ body{
     background-color: rgb(51, 6, 122);
     grid-area: footer;
     color: white;
+    gap:10px;
 }
 #footer .redes{
     padding-top: 10px;
@@ -122,4 +131,67 @@ body{
 #footer p{
     margin: 0;
     padding-bottom:10px;
+}
+
+/* Version Desktop */
+/* -------------------------------------------------------- */
+@media (min-width:576px){
+    .container-grid{
+        display: grid;
+        height: 100vh;
+        grid-template-columns: auto 1fr 1fr;
+        grid-template-rows: auto 1fr auto;
+        grid-template-areas: 
+        "navbar filtro filtro"
+        "navbar contenido contenido"
+        "footer contenido contenido";
+    }
+    #contenedor-navbar{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+    }
+    #contenedor-navbar .marca{
+        display: flex;
+        align-items: center;
+        gap:10px
+    }
+    #contenedor-navbar .fa-bars{
+        display: none;
+        }
+    #contenedor-navbar .list{
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        gap:10px;
+    }
+    #footer p{
+       width: 80%; 
+       text-align: center;
+    } 
+    #contenido{
+        width: 100%;
+        height: 100%;
+    }
+    #contenido .galeria{
+        overflow:  scroll;
+        width: 90%;
+        display: grid;
+        gap:10px;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
+        border: none;
+    }
+    #contenido .card{
+         max-height: 200px;
+         max-width: 250px;
+         border: 1px solid;
+    }
+    #contenido .card img{
+        max-width: 100%;
+        max-width: 80%;
+    }
 }
