--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,24 +74,30 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     height: 100%;
 }
 #contenido .card img{
-    width: 300px;
+    width: 100%;
     height: 250px ;
 }
-#contenido .card p{
-    margin:0;
-    padding-top: 10px;
+#contenido .card .card-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-#contenido .card button{
+#contenido .card .card-body p{
+    margin:0;
+    font-size: 1.2em;
+}
+#contenido .card .card-body button{
     margin-bottom: 10px;
     color: white;
-    background-color: rgb(3, 58, 177);
+    background-color: rgb(65, 93, 151);
     width: 70px;
-    height: 20px;
+    height: 35px;
     border: none;
+    border-radius: 10%;
 }
 #contenido .paginar{
     display: flex;
@@ -184,14 +190,17 @@ body{
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr 1fr;
         border: none;
+        max-height: 100%;
     }
     #contenido .card{
-         max-height: 200px;
-         max-width: 250px;
+         width: 200px;
+         height: 300px;
          border: 1px solid;
     }
     #contenido .card img{
         max-width: 100%;
-        max-width: 80%;
+        max-height: 250px
     }
+
+
 }
