--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 100%;
+    min-height: 100%;
 }
 #contenido .card img{
     width: 100%;
@@ -184,22 +184,26 @@ body{
     }
     #contenido .galeria{
         overflow:  scroll;
-        width: 90%;
+        width:90%;
         display: grid;
-        gap:10px;
+        gap: 10px;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr 1fr;
         border: none;
         max-height: 100%;
     }
-    #contenido .card{
-         width: 200px;
+    #contenido .galeria .card{
+         width: 100%;
          height: 300px;
          border: 1px solid;
-    }
+         justify-content: space-between;
+        }
     #contenido .card img{
-        max-width: 100%;
-        max-height: 250px
+        min-width: 100%;
+        max-height: 70% ;
+    }
+    #contenido .card.card-body{
+      /*   height: 20%; */
     }
 
 
