--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,7 @@ body{
         max-height: 100%;
     }
     #contenido .galeria .card{
-         width: 100%;
+         width: 200px;
          height: 300px;
          border: 1px solid;
          justify-content: space-between;
